--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,18 @@
 services:
+  nextapp:
+    container_name: nextapp
+    image: nextapp:1.0.0
+    build:
+      context: ./frontend
+      dockerfile: next.dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:4000
+    depends_on:
+      - flaskapp
+
+  # flask service
   flaskapp:
     container_name: flaskapp
     image: flaskapp:1.0.0
@@ -12,10 +26,11 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
     depends_on:
       - db
+
+  # db service
   db:
     container_name: db
     image: postgres:13
-    restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -26,4 +41,4 @@ services:
       - pgdata:/var/lib/postgresql/data
 
 volumes:
-  pgdata:
+  pgdata: {}
